src/test/ui/parser/byte-string-literals.stderr
error: unknown byte escape: f
  --> $DIR/byte-string-literals.rs:1:32
   |
LL | static FOO: &'static [u8] = b"\f";
   |                                ^ unknown byte escape

error: unknown byte escape: f
  --> $DIR/byte-string-literals.rs:4:8
   |
LL |     b"\f";
   |        ^ unknown byte escape

error: invalid character in numeric character escape: Z
  --> $DIR/byte-string-literals.rs:5:10
   |
LL |     b"\x0Z";
   |          ^

error: byte constant must be ASCII. Use a \xHH escape for a non-ASCII byte
  --> $DIR/byte-string-literals.rs:6:7
   |
LL |     b"é";
   |       ^

error: unterminated double quote byte string
  --> $DIR/byte-string-literals.rs:7:6
   |
LL |       b"a
   |  ______^
LL | | }
   | |__^

error: aborting due to 5 previous errors

